fix some bugs to connect with app
